--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <input type="text" id="username" placeholder="Phone number,username or email"><br>
                         <input type="password" id="password" placeholder="Password">
                     </form>
-                    <button type="submit" id="Log-In" placeholder="Log In">Log In</button>
+                    <button type="submit" id="Log-In" placeholder="Log In" onclick="document.getElementById('Log-In').innerHTML='Ni mimi na wewe tu'">Log In</button>
                     <br> OR
                     <br>
                     <div class="fb">
